chore: Simplify set creation using Java 11 method